updated developers credit

--- a/credit.html.haml
+++ b/credit.html.haml
@@ -1,9 +1,8 @@
 #credit
 	%article#developers
 		%h2 developers
-		%ul
-			%li Andrew Kaufman
-			%li Nelson Liu
+		= link_to "Andrew Kaufman", "", :class => "developer"
+		= link_to "Nelson Liu", "http://nelsonliu.co/", :class => "developer"
 	%article#tools
 		%h2 tools
 		%ul
