--- a/sass/screen.css.scss
+++ b/sass/screen.css.scss
@@ -73,6 +73,32 @@ div#proposal, div#credit {
 			}
 		}
 	}
+	article#developers {
+		h2 {
+			@include grid(16);
+			text-align: center;
+		}
+		.developer {
+			@include grid(7);
+			@include border-radius(10px);
+			@include box-shadow(#7f7f7f 0 1px 1px, rgba(lighten($application-blue, 15%), 0.3) 0 1px 1px inset);
+			@include transition-property(box-shadow, background-color, color, border-color);
+			@include transition-duration(0.3s);
+			@include transition-timing-function(ease-out);
+			background-color: rgba($application-blue, 0.3);
+			color: black;
+			padding: 15px 29px;
+			margin: 15px;
+			border: 1px solid #7f7f7f;
+			text-align: center;
+			&:hover {
+				@include box-shadow(#7f7f7f 0 3px 3px, rgba(lighten($application-blue, 15%), 1) 0 1px 3px inset);
+				background-color: rgba($application-blue, 0.8);
+				color: white;
+				border-color: $application-blue;
+			}
+		}
+	}
 }
 
 /* Demo */
