no more Lorem Ipsum!

--- a/_header.haml
+++ b/_header.haml
@@ -1,6 +1,6 @@
 #header_wrapper
-	%h1#logo= link_to "Dealzies", "/"
+	%h1#logo= link_to "Dealzies", "index.html"
 	%nav#main
-		= link_to "proposal", "/"
-		= link_to "demo", "/demo.html"
-		= link_to "credit", "/credit.html"
+		= link_to "proposal", "index.html"
+		= link_to "demo", "demo.html"
+		= link_to "credit", "credit.html"
