--- a/sass/screen.css.scss
+++ b/sass/screen.css.scss
@@ -23,7 +23,7 @@ a {
 
 header {
 	@include box-shadow(#7f7f7f 0 -1px 2px inset);
-	background-image: url(/images/binding_light.png);
+	background-image: url(../images/binding_light.png);
 	#header_wrapper {
 		@include grid-container();
 		@include clearfix();
