--- a/credit.html.haml
+++ b/credit.html.haml
@@ -1,7 +1,7 @@
 #credit
 	%article#developers
 		%h2 developers
-		= link_to "Andrew Kaufman", "", :class => "developer"
+		= link_to "Andrew Kaufman", "http://www.linkedin.com/pub/andrew-kaufman/49/875/31b", :class => "developer"
 		= link_to "Nelson Liu", "http://nelsonliu.co/", :class => "developer"
 	%article#github
 		%h2 repository
@@ -18,3 +18,9 @@
 		%ul
 			%li= link_to "Amazon.com", "http://www.amazon.com/"
 			%li= link_to "eBay.com", "http://www.ebay.com/"
+	%article#references
+		%h2 references
+		%ul
+			%li= link_to "Native HTML5 Drag and Drop - HTML 5 Rocks", "http://www.html5rocks.com/en/tutorials/dnd/basics/"
+			%li= link_to "Drag and drop - DragDrop | MDN", "https://developer.mozilla.org/en-US/docs/DragDrop/Drag_and_Drop"
+			%li= link_to "SASS Triangle Mixin", "http://github.com/wagerfield/cssmixins"
